--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,8 @@
 ---
 # handlers file for basicSetup
 - name: reload network
-  command: "{{ item}}"
+  command: "{{ item }}"
+  ignore_errors: true
   with_items:
   - sysctl -p
   - systemctl restart networking
