--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -74,11 +74,12 @@
   shell: "tune2fs -l /dev/sda2 | grep Error"
   register: sda2_failure_mode
   changed_when: false
+  ignore_errors: true
   when: ansible_facts['os_family'] != "OpenWrt"
 
 - name: Imposta panic per la root in caso di failure
   shell: "tune2fs -e panic /dev/sda2"
-  when: sda2_failure_mode.rc == 0 and "Panic" not in sda2_failure_mode.stdout
+  when: sda2_failure_mode.rc | default(1)  == 0 and "Panic" not in sda2_failure_mode.stdout
 
 - name: Enable systemd watchdog
   ini_file:
